--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-native-web": "~0.19.10",
     "react-dom": "18.2.0",
     "@expo/metro-runtime": "~3.2.1",
-    "expo-image-picker": "~15.0.5"
+    "expo-image-picker": "~15.0.5",
+    "expo-location": "~17.0.1",
+    "react-native-maps": "1.14.0",
+    "expo-sqlite": "~14.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
